--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
